apps/base/freshrss/freshrss-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freshrss
  namespace: apps
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: freshrss
